--- a/css/color.css
+++ b/css/color.css
@@ -1,2 +1,23 @@
+
 /* CSS COLOR */
 /* **************************************************************** */
+
+body {
+    background-color: #F1AE4A;
+  }
+
+  h1{
+
+    color:white;
+    
+  }
+  h2{
+
+    color:white;
+    
+  }
+  p{
+
+    color:white;
+    
+  }
