--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -2,5 +2,14 @@
 /* **************************************************************** */
 
 @font-face {
+    @font-face {
+        font-family: Kanit;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: left;
     
+    } 
 }
