--- a/css/layout.css
+++ b/css/layout.css
@@ -2,3 +2,94 @@
 /* **************************************************************** */
 
 
+.dog{
+
+    position: absolute;
+    width: 394px;
+    height: 457px;
+    left: 75px;
+    top: 274px;
+    
+    
+    }
+    
+    h1{
+        position: absolute;
+        width: 93px;
+        height: 37px;
+        left: 130px;
+        top: 60px;
+        
+       
+    
+    }
+    
+    .dog{
+    
+        position: absolute;
+        width: 900px;
+        height: 1021px;
+        left: 540px;
+        top: 3px;    
+    }
+    
+    p{
+    position: absolute;
+    width: 394px;
+    height: 457px;
+    left: 75px;
+    top: 274px;   
+    font-family: Kanit;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 27px;
+        
+    }
+    
+    .boton-personalizado {
+    
+        position: absolute;
+        width: 50px;
+        height: 40px;
+        left: 340px;
+        top: 659px;
+        background: #C60707;
+        border-radius: 10px;
+        }
+        
+     a{
+    
+        position: absolute;
+        width: 38px;
+        height: 24px;
+        left: 400px;
+        top: 680px; 
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 36px;
+        color: #FFFFFF;
+        }
+        .logo{
+         
+    position: absolute;
+    left: 2.57%;
+    right: 91.81%;
+    top: 3.91%;
+    bottom: 89.06%;
+        }
+    
+        h2{
+    
+            position: absolute;
+            width: 168px;
+            height: 51px;
+            left: 97px;
+            top: 204px;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 54px;  
+        }
+    
