--- a/css/color.css
+++ b/css/color.css
@@ -1,23 +1,31 @@
-
 /* CSS COLOR */
 /* **************************************************************** */
 
-body {
-    background-color: #F1AE4A;
-  }
-
-  h1{
-
-    color:white;
+/* VARIABLES */
+:root{
+    --colorFondo: #ECEDEE;
+    --colorBotonMore: #F96D6F;
+    --colorBotonSteps: #39466C;
+    --colorTitulos: #031146;
+    --colorTextoParrafo: #636363;
+    --colorLinks: #549CDC;
+    --colorDegrBannerIzq: #f9f4e5;
+    --colorDegrBannerDer: #eacef6;
     
-  }
-  h2{
+}
 
-    color:white;
-    
-  }
-  p{
 
-    color:white;
-    
-  }
+/* COLORES en puntos concretos */
+.contenedor{
+    background-color: var(--colorFondo);
+}
+
+main{
+    background-color: #fff;
+}
+
+.banner{
+    background-image: linear-gradient(90deg, 
+    var(--colorDegrBannerIzq) 46%, 
+    var(--colorDegrBannerDer) 100%);
+}
