--- a/css/layout.css
+++ b/css/layout.css
@@ -1,95 +1,84 @@
 /* CSS LAYOUT */
 /* **************************************************************** */
 
+/* VARIABLES */
 
-.dog{
+:root {
+  /* Ancho de Escritorio 2022 */
+  --anchoPantalla: 1366px;
+}
 
-    position: absolute;
-    width: 394px;
-    height: 457px;
-    left: 75px;
-    top: 274px;
-    
-    
-    }
-    
-    h1{
-        position: absolute;
-        width: 93px;
-        height: 37px;
-        left: 130px;
-        top: 60px;
-        
-       
-    
-    }
-    
-    .dog{
-    
-        position: absolute;
-        width: 900px;
-        height: 1021px;
-        left: 540px;
-        top: 3px;    
-    }
-    
-    p{
-    position: absolute;
-    width: 394px;
-    height: 457px;
-    left: 75px;
-    top: 274px;   
-    font-family: Kanit;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 27px;
-        
-    }
-    
-    .boton-personalizado {
-    
-        position: absolute;
-        width: 50px;
-        height: 40px;
-        left: 340px;
-        top: 659px;
-        background: #C60707;
-        border-radius: 10px;
-        }
-        
-     a{
-    
-        position: absolute;
-        width: 38px;
-        height: 24px;
-        left: 400px;
-        top: 680px; 
-        font-style: normal;
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 36px;
-        color: #FFFFFF;
-        }
-        .logo{
-         
-    position: absolute;
-    left: 2.57%;
-    right: 91.81%;
-    top: 3.91%;
-    bottom: 89.06%;
-        }
-    
-        h2{
-    
-            position: absolute;
-            width: 168px;
-            height: 51px;
-            left: 97px;
-            top: 204px;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 36px;
-            line-height: 54px;  
-        }
-    
+/* HEADER */
+
+/* NAV */
+
+/* Fondo */
+
+.contenedor {
+  height: 100vh;
+  padding-top: 5%;
+  /* Centrar Main y Footer */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* calculo de la mitad del tamaño de pantalla */
+
+main,
+footer {
+  width: calc(var(--anchoPantalla) / 2);
+}
+
+/* ******* */
+
+/* Contenido */
+
+main {
+  border-radius: 20px;
+  height: 90%;
+}
+
+/* Zona Banner */
+
+.banner,
+.texto,
+.contacto {
+  padding: 5%;
+}
+
+/* Copyright y dirección */
+
+footer {
+  height: 5%;
+  /* Espacio de los laterales */
+  padding: 2% 10%;
+  text-align: center;
+}
+
+/* SECTION */
+
+.contacto {
+  grid-template-rows: 1fr;
+  gap: 8px;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 75px 1fr;
+}
+
+#texto__botonCentrar {
+  justify-content: center;
+  display: flex;
+}
+
+#perfil {
+  border-radius: 45px;
+}
+
+/* ASIDE */
+
+/* ARTICLE */
+
+/* FIGURE */
+
+/* FOOTER */
